--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -16,7 +16,7 @@
     <P style="color:red"> HTML Links</p>
     <a href="https://www.facebook.com/">Click to open facebook</a>
     <p style="color:red">IMAGE</p><br>
-    <img src="C:\Users\Lenovo\Desktop\smile.jpg " width="100" height="100">
+    <img src="C:\Users\Lenovo\Desktop\html-css\assignment1\smile.jpg " width="100" height="100">
     <p style="color:red">LOCAL VIDEO WITH THUMBNAIL</P>
       <video width="360" height="200" poster="C:\Users\Lenovo\Desktop\se.png" controls>
    <source src="C:\Users\Lenovo\Desktop\movie.mp4" type="video/mp4">
