--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -16,11 +16,11 @@
     <P style="color:red"> HTML Links</p>
     <a href="https://www.facebook.com/">Click to open facebook</a>
     <p style="color:red">IMAGE</p><br>
-    <img src="C:\Users\Lenovo\Desktop\html-css\assignment1\smile.jpg " width="100" height="100">
+    <img src="../assignment1/smile.jpg " width="100" height="100">
     <p style="color:red">LOCAL VIDEO WITH THUMBNAIL</P>
-      <video width="360" height="200" poster="C:\Users\Lenovo\Desktop\html-css\assignment1\se.png" controls>
-   <source src="C:\Users\Lenovo\Desktop\html-css\assignment1\movie.mp4" type="video/mp4">
-   <source src="C:\Users\Lenovo\Desktop\html-css\assignment1\movie.ogg" type="video/ogg">
+      <video width="360" height="200" poster="../assignment1/se.png" controls>
+   <source src="../assignment1/movie.mp4" type="video/mp4">
+   <source src="..assignment1/movie.ogg" type="video/ogg">
     </video>
     <p style="color:red">YOUTUBE VIDEO</p>
     <iframe width="350" height="300" src="https://www.youtube.com/embed/tgbNymZ7vqY">
